Initialize IOThread for AIA fetching in headless

Bug: 754319
Change-Id: Iec5cebdfa53916bf8759909e444bafdc7acf5881
Reviewed-on: https://chromium-review.googlesource.com/611695
Reviewed-by: David Vallet <dvallet@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: David Vallet <dvallet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494610}
Former-commit-id: 00b4dabf83be8cb54213ea6cf66957699be3f539